<resources>
    <string name="app_name">PesaApp</string>
    <string name="welcome_to_PesaApp">Welcome to PesaApp</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_text">Dont have an account? Sign up</string>
    <string name="input_details">Input details</string>
    <string name="signup">Sign up</string>
    <string name="already_account">Already have an account ?Log in</string>
    <string name="email">Email address</string>
    <string name="log_out">Log out</string>
    <string name="title_text"><![CDATA[Events & Travel]]></string>
    <string name="featured_events">Featured Events</string>
    <string name="categories">Categories</string>
    <string name="categories_description">Categories description</string>
    <string name="my_favourite">My Favourites</string>
    <string name="see_all">See all</string>
    <string name="more_events">More events</string>
    <string name="load_all_events">Load all events</string>
    <string name="dummy_text">Tinga tinga tales of subsahara </string>
    <string name="dummy_host">Kenya National Theatre(KNT)</string>
    <string name="by_dummy_host">by nkKenya National Theatre(KNT)</string>
    <string name="when">When</string>
    <string name="dummy_tinga">Tinga tinga prod</string>
    <string name="date">Sun 30 sep 10 am -7 pm</string>
    <string name="random_text">A secret mission and go buy me a private jet u see i can not fly anymore so i need someone to send me a private JET NOT A AIRPLANE i already have 2,345 airplanes please do not send me an airplane.please and thank you i hope u can complete my mission.</string>
    <string name="select_tickets">Select Tickets</string>
    <string name="ticket_type">Ticket type</string>
    <string name="prices">Price (KES)</string>
    <string name="qty">Qty</string>
    <string name="early_bird">Early Bird Day 1</string>
    <string name="five_hundred">500</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="closes_on">Closes on:</string>
    <string name="advance_day_1">Advance day 1</string>
    <string name="fifteen_hundred">1500</string>
    <string name="proceed">Proceed to buy</string>
    <string name="safaricom_pre_paid">Safaricom Pre-paid</string>
    <string name="account">ACCOUNT</string>
    <string name="total">TOTAL</string>
    <string name="pay_with">PAY WITH</string>
    <string name="kes_5000">KES 5000</string>
    <string name="card">Card</string>
    <string name="m_pesa">M-PESA</string>
    <string name="continues">continue</string>
    <string name="ok">Proceed to event?</string>
    <string name="cancel">cancel</string>
    <string name="found">Found one result</string>
    <string name="location">Location</string>
    <string name="none">No results found</string>
    <string name="preference_key">myprivatekey</string>
    <string name="user_phone">phone</string>
    <string name="pesapref">pesapreference</string>
    <string name="event_image">Event image</string>
    <string name="favourite_description">Favourite description</string>
    <string name="add_a_new_card">Add a new card</string>
</resources>
