<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >
            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/gaming"
                android:fitsSystemWindows="true">
            </android.support.design.widget.AppBarLayout>
        </android.support.design.widget.CoordinatorLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_marginTop="8dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_text"
                    android:textSize="@dimen/sp_thirty_two"
                    android:textColor="@android:color/black"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_tinga"
                    android:layout_marginTop="@dimen/eight_dp"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/eight_dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_access_time_black_24dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:layout_marginRight="@dimen/eight_dp"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/when"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="@string/date"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/eight_dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_place_black_24dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:layout_marginRight="@dimen/eight_dp"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/when"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="@string/dummy_host"
                            />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:layout_marginBottom="@dimen/eight_dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_text"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/select_tickets"
                   android:textColor="@android:color/black"
                   />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/eight_dp"
                   >
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/ticket_type"
                       />
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/prices"
                       />
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/qty"
                       android:gravity="center"
                       />
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/eight_dp"
                   >
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/early_bird"
                       android:textColor="@android:color/black"
                       />
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/five_hundred"
                       />
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_weight="5"
                       android:layout_height="wrap_content">
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:text="@string/minus"
                           />
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:text="@string/zero"
                           />
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:text="@string/plus"
                           />
                   </LinearLayout>
               </LinearLayout>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/closes_on"
                   android:textColor="@android:color/holo_red_dark"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/date"
                   />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/eight_dp"
                   >
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/advance_day_1"
                       android:textColor="@android:color/black"
                       />
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="5"
                       android:text="@string/fifteen_hundred"
                       />
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_weight="5"
                       android:layout_height="wrap_content">
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:text="@string/minus"
                           />
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:text="@string/zero"
                           />
                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="5"
                           android:text="@string/plus"
                           />
                   </LinearLayout>
               </LinearLayout>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/closes_on"
                   android:textColor="@android:color/holo_red_dark"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/date"
                   />
               <Button
                   style="@style/fields_button"
                   android:text="@string/proceed"

                   />
           </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>