<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Payment"
    android:orientation="vertical">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
           />
    </android.support.design.widget.CoordinatorLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/sixteen_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/thirty_two_dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_strong"
            android:orientation="vertical"
            android:paddingLeft="@dimen/eight_dp"
            android:paddingRight="@dimen/eight_dp"
            android:padding="@dimen/eight_dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safaricom_pre_paid"
                android:textColor="@android:color/white"
                android:layout_marginTop="160dp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:text="@string/account"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@android:color/white"
                    android:text="@string/total"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    tools:text="@string/dummy_text"
                    android:id="@+id/account_tv"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@android:color/white"
                    tools:text="@string/kes_5000"
                    android:id="@+id/price_pay"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_with"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/thirty_two_dp"
        android:textColor="@android:color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:gravity="center"
        >
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/eight_dp"
            android:text="@string/card"
            android:background="@android:color/white"
            android:textColor="@color/blue_light"
            tools:ignore="RtlHardcoded"
            android:padding="@dimen/sixteen_dp"
            android:id="@+id/card"
            />
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:text="@string/m_pesa"
            android:background="@drawable/payment_elected"
            android:textColor="@color/blue_strong"
            tools:ignore="RtlHardcoded"
            android:drawableStart="@drawable/ic_check_circle_black_24dp"
            android:drawableLeft="@drawable/ic_check_circle_black_24dp"
            android:padding="@dimen/sixteen_dp"
            android:id="@+id/mpesa"

            />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/continues"
        android:layout_marginTop="62dp"
        android:layout_marginLeft="@dimen/thirty_two_dp"
        android:layout_marginRight="@dimen/thirty_two_dp"
        android:background="@drawable/field_serchview"
        android:id="@+id/pay_btn"
        />
</LinearLayout>