<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/sixteen_dp"
    android:layout_marginTop="@dimen/sixteen_dp"
    android:layout_marginLeft="@dimen/eight_dp"
    android:layout_marginRight="@dimen/eight_dp"
    app:cardCornerRadius="@dimen/sp_sixteen"

    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            tools:background="@drawable/gaming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/categories_description"
            />

        <ImageView
            android:layout_width="@dimen/heartshape"
            android:layout_height="@dimen/heartshape"
            android:background="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/favourite_heart"
            android:src="@android:color/transparent"
            android:contentDescription="@string/categories_description"
            android:alpha="1"
            />
        <TextView
            android:id="@+id/more_title"
            style="@style/Events_more_items"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/guideline3"
            tools:text="@string/dummy_text" />

        <TextView
            android:id="@+id/host_tv"
            style="@style/Events_more_items"
            android:textSize="@dimen/sp_sixteen"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/more_title"
            tools:text="@string/dummy_host" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/date_view"
            android:orientation="vertical"
            android:padding="@dimen/eight_dp"
            android:layout_marginBottom="@dimen/dp_twent_four"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <TextView
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="SEPT"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:text="30"
                android:gravity="center"

                />
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/eight_dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="75dp"
            android:visibility="invisible"
            />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="220dp"
            android:visibility="invisible"
            />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>